tests/NormalTests/paczka1/fuzzy1/25016500.err
Error in line 13: VzLKgxg A110 62,1
Error in line 10: jMxbWe1v0m A110 4,0
Error in line 18: DlklClwXLYd A110 39,8
Error in line 14: VzLKgxg S315 79,7
Error in line 25: I7pcbt2cS5x S315 9,9
